--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,7 +1,8 @@
 body
 {
+    background: #1e1f24;
     color:#333;
-    text-align: left;
+    text-align: center;
     font-family: "Arial";
     font-size: 16px;
     margin: 0;
@@ -39,5 +40,6 @@ body
 
 #post
 {
-    padding: 1 em;
+    background: white;
+    padding: 1em;
 }
