color footer verde y letra blanca

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -41,3 +41,12 @@ body
 {
     padding: 1 em;
 }
+#footer
+{
+    background: green;
+    border: 1px solid #ddd; 
+}
+#footer p
+{
+    color: honeydew;
+}
